# suna

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  NEXT_STEPS.md  README.md  package.json
.github/workflows/: release.yml
.sisyphus/: SESSION_COMPLETE.md  boulder.json
.sisyphus/notepads/debug-audio-plugin/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/debug-wasmdsp-logging/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/fix-wamr-thread-env/: HANDOFF.md  NEXT_SESSION_QUICKSTART.md  PATTERN_A_CLEANUP.md  PATTERN_BC_GUIDE.md  README.md  STATUS.md  TROUBLESHOOTING.md  decisions.md  issues.md  learnings.md
.sisyphus/notepads/suna/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/suna-kodama-parity/: INTEGRATION_REPORT.md  decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: debug-audio-plugin.md  debug-wasmdsp-logging.md  fix-wamr-thread-env.md  suna-kodama-parity.md  suna.md  ui-fix-resize-slider.md
docs/: dsp-architecture-proposal.md  wasm-memory-explained.md
dsp/: moon.mod.json
dsp/src/: blend.mbt  buffer.mbt  buffer_test.mbt  delay.mbt  delay_test.mbt  exports.mbt  lib.mbt  moon.pkg.json  sampler.mbt  sampler_test.mbt
dsp/src/utils/: blend.mbt  blend_test.mbt  constants.mbt  grain.mbt  grain_test.mbt  memory.mbt  moon.pkg.json  slot.mbt  slot_test.mbt
plugin/: CMakeLists.txt
plugin/include/suna/: WasmDSP.h
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WasmDSP.cpp
scripts/: apply-wamr-patch.sh  build-dsp.sh  build-installer-macos.sh  setup-macos.sh  wamr-macos.patch
tests/cpp/: CMakeLists.txt  plugin_test.cpp  wasm_dsp_test.cpp  wasm_poc.cpp
ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/public/worklet/: processor.js
ui/src/: App.spec.ts  App.vue  vite-env.d.ts
ui/src/components/: SliderControl.spec.ts  SliderControl.vue  WaveformCanvas.vue  XYPadDisplay.vue
ui/src/composables/: useGamepad.ts  useRuntime.ts  useSampler.ts
ui/src/juce/: index.d.ts
ui/src/runtime/: JuceRuntime.ts  WebRuntime.ts  types.ts
ui/src/types/: juce.d.ts
